Fixed collapsed navbar hamburger position

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4181,7 +4181,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   float: right;
   padding: 9px 10px;
-  margin-top: 8px;
+  margin-top: 20x;
   margin-right: 15px;
   margin-bottom: 8px;
   background-color: transparent;
